--- a/Asteroids/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids/Asteroids.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BigAsteroid.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +55,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sprites.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +67,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +81,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Asteroid 1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro - 1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro7.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
