--- a/Asteroids/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids/Asteroids.csproj
@@ -46,29 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BigAsteroid.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Spaceship.cs" />
+    <Compile Include="AsteroidsMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AsteroidsMain.Designer.cs">
+      <DependentUpon>AsteroidsMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainAsteroid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AsteroidsMain.resx">
+      <DependentUpon>AsteroidsMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -81,15 +82,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Asteroid 1.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Astro1.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Astro - 1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Astro7.png" />
@@ -110,10 +102,13 @@
     <None Include="Resources\Astro2.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Astro1.png" />
+    <None Include="Resources\Arrow.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Arrow.png" />
+    <None Include="Resources\Astro1-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Astro1_2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
