--- a/Asteroids/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids/Asteroids.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Shots.cs" />
+    <Compile Include="AsteroidsSP.cs" />
     <Compile Include="Spaceship.cs" />
     <Compile Include="AsteroidsMain.cs">
       <SubType>Form</SubType>
