--- a/Asteroids/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids/Asteroids.csproj
@@ -46,11 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColissionInfo.cs" />
+    <Compile Include="GameManager.cs" />
+    <Compile Include="HitBox.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RecHitBox.cs" />
     <Compile Include="Shots.cs" />
     <Compile Include="AsteroidsSP.cs" />
     <Compile Include="Spaceship.cs" />
@@ -63,6 +67,7 @@
     <Compile Include="MainAsteroid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpriteHitBox.cs" />
     <Compile Include="Sprites.cs" />
     <EmbeddedResource Include="AsteroidsMain.resx">
       <DependentUpon>AsteroidsMain.cs</DependentUpon>
